--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </nav>  
     <header>
         <h1>CSS Transitions</h1>
+        <p>hello</p>
     </header>
     <button id="btn">Button</button>
     <br>
